--- a/demo/binary_classification/mushroom.conf
+++ b/demo/binary_classification/mushroom.conf
@@ -16,14 +16,17 @@ max_depth = 3
 
 # Task Parameters
 # the number of round to do boosting
-num_round = 2
+num_round = 20
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "agaricus.txt.train"
+#data = "agaricus.txt.train"
+data = "/github/xgboost/demo/data/agaricus.txt.train"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "agaricus.txt.test"
+#eval[test] = "agaricus.txt.test"
+eval[test] = "/github/xgboost/demo/data/agaricus.txt.test"
 # evaluate on training data as well each round
 eval_train = 1
 # The path of test data
-test:data = "agaricus.txt.test"
+#test:data = "agaricus.txt.test"
+test:data = "/github/xgboost/demo/data/agaricus.txt.test"
